--- a/my-react-app/src/SignupBody/SignupBody.css
+++ b/my-react-app/src/SignupBody/SignupBody.css
@@ -1,5 +1,6 @@
 body{
-    background: url('./Assets/LoginBackground.jpg');
+    background: url('./Assets/SignupBackground.jpg');
+    /* background: black; */
     background-size: cover;
     background-position: center;
 }
@@ -20,8 +21,13 @@ body{
 .wrapper .input-box{
     position: relative;
     width: 100%;
-    height: 40px;
+    height: 50px;
     margin: 20px 0px;
+}
+
+.input-box .label{
+    font-size: 16px;
+    color:azure;
 }
 
 .input-box input{
@@ -48,14 +54,6 @@ body{
     transform: translateY(-50%);
     font-size: 16px;
 }
-
-/* .wrapper .short-input-box{
-    justify-content: space-between;
-    position: relative;
-    width: 50%;
-    height: 50px;
-    margin: 20px 0px;
-} */
 
 .wrapper .remember-forgot{
    display: flex;
