--- a/my-react-app/src/LoginTasnia/Login.css
+++ b/my-react-app/src/LoginTasnia/Login.css
@@ -17,6 +17,12 @@ body{
     color: azure;
 }
 
+.wrapper h2{
+    font-size: 20px;
+    text-align: center;
+    color: azure;
+}
+
 .wrapper .input-box{
     position: relative;
     width: 100%;
