--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
+html,
+body,
+#root,
+.app,
+.content {
+  height: 100%;
+  width: 100%;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.app {
+  display: flex;
+  position: relative;
+}
+
+/*my index.css starts here*/
+
 :root {
   
   font-family: "Poppins", sans-serif;
@@ -82,6 +99,8 @@ button:focus-visible {
   }
 }
 
+/*my index.css ends here*/
+
 .content{
   height: 100%;
   width: 100%;
@@ -107,7 +126,7 @@ button:focus-visible {
   background: #888;
 }
 
-/* Handle on hover */
+/* Handle on hover*/
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
