Dialog opening closing properly

--- a/my-react-app/src/assets/AddContestModal.css
+++ b/my-react-app/src/assets/AddContestModal.css
@@ -5,7 +5,7 @@
 
 .wrapper{
     width: 420px;
-    background: #2e7c67;
+    background: #2d7b66;
     
     padding: 20px 20px;
     border-radius: 10px;
